DEV-Microk8s/plex_deployment/plex-ingress.yaml
# Ingress yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: media # MUST match the namespace where your app's service lives
  annotations:
    # Specify the cert-manager resource
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - plex.dev.k8s.powersstudios.net # The URL you want to use
    # cert-manager will automatically create this Secret and store the certificate here
    secretName: plex-tls-secret 
  rules:
  - host: plex.dev.k8s.powersstudios.net # The URL you want to use
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-clusterip-svc # The exact name of your app's ClusterIP service
            port:
              number: 32400 # The internal port your app uses
